--- a/index.html
+++ b/index.html
@@ -83,22 +83,63 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-content">
+                <div class="about-left">
+                    <div class="profile-container">
+                        <div class="profile-hex">
+                            <div class="profile-img-placeholder">
+                                <i class="fas fa-user-shield"></i>
+                            </div>
+                        </div>
+                        <div class="profile-backdrop"></div>
+                    </div>
+                    <div class="about-tags">
+                        <span class="about-tag"><i class="fas fa-shield-alt"></i> Ethical Hacker</span>
+                        <span class="about-tag"><i class="fas fa-brain"></i> ML Researcher</span>
+                        <span class="about-tag"><i class="fas fa-university"></i> NYU Abu Dhabi</span>
+                    </div>
+                </div>
                 <div class="about-text">
+                    <div class="typing-effect">
+                        <span class="prompt">root@kali:~$</span>
+                        <span class="typed-text">whoami</span>
+                    </div>
+                    <h3 class="about-subtitle">Security & AI Specialist</h3>
                     <p>Passionate about securing digital environments and mitigating cyber threats through AI-driven security solutions. With 2.5 years of experience, I specialize in threat detection, malware analysis, and incident response using machine learning.</p>
                     <p>Recognized as India's youngest ethical hacker (CEH at 18), achieved 92% phishing detection accuracy, and received the Best Intern Award for uncovering critical vulnerabilities.</p>
-                </div>
-                <div class="stats">
-                    <div class="stat-item">
-                        <span class="number">2.5</span>
-                        <span class="label">Years Experience</span>
+                    
+                    <div class="tech-interests">
+                        <h4>Research Interests</h4>
+                        <div class="interest-pills">
+                            <span>Quantum Computing</span>
+                            <span>Neural Networks</span>
+                            <span>Cloud Security</span>
+                            <span>Malware Analysis</span>
+                            <span>Advanced Threat Detection</span>
+                        </div>
                     </div>
-                    <div class="stat-item">
-                        <span class="number">92%</span>
-                        <span class="label">Phishing Detection</span>
-                    </div>
-                    <div class="stat-item">
-                        <span class="number">1</span>
-                        <span class="label">Patent</span>
+                    
+                    <div class="about-stats">
+                        <div class="stat-item">
+                            <div class="stat-icon"><i class="fas fa-user-clock"></i></div>
+                            <div class="stat-info">
+                                <span class="number">2.5</span>
+                                <span class="label">Years Experience</span>
+                            </div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-icon"><i class="fas fa-chart-line"></i></div>
+                            <div class="stat-info">
+                                <span class="number">92%</span>
+                                <span class="label">Phishing Detection</span>
+                            </div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-icon"><i class="fas fa-file-contract"></i></div>
+                            <div class="stat-info">
+                                <span class="number">1</span>
+                                <span class="label">Patent</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
